# asiaquest_test

./: .gitignore  docker-compose.yaml  package.json  pnpm-lock.yaml  readme.md  todo.md
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  readme.md
backend/app/: config.py  database.py  main.py
backend/app/dtos/: __init__.py  auth.py  claim.py  insurance.py
backend/app/errors/: __init__.py  exceptions.py
backend/app/models/: __init__.py  claim_approval.py  claim_insurance.py  claim_review.py  insurance.py  user.py
backend/app/routes/: __init__.py  auth_routes.py  claim_routes.py  insurance_routes.py
backend/app/services/: __init__.py  auth_service.py  claim_service.py  insurance_service.py
backend/app/utils/: auth.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 20260311_072010_3cd2bd18e7a5_init_data.py  20260311_074901_22deb896abdb_init_insurance.py  20260311_135811_c0ebe140223c_init.py  20260311_143104_85723c387107_init_data.py  20260311_160000_add_history_tracking.py
backend/tests/: conftest.py  test_auth_service.py  test_claim_service.py
backend/tools/: seeder.py  seeder_data.py
docs/: backend_architecture.md  frontend_architecture.md
frontend/: .env.example  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: app.vue
frontend/app/composables/: useApi.ts  useAuth.ts  useAuthStore.ts  useClaims.ts  useInsurance.ts
frontend/app/layouts/: dashboard.vue
frontend/app/middleware/: approver.ts  auth.ts  verifier.ts
frontend/app/pages/: index.vue
(+34 files in other folders)
